# ubiquitous-potato

./: .pre-commit-config.yaml  README.md
backend/: Makefile  pyproject.toml
backend/potato/: logs.py  models.py  runner.py
backend/potato/api/: app.py  models.py
backend/potato/api/routes/: core.py  group.py  recipe.py  site.py  user.py
backend/potato/storage/: db.py  models.py  orm.py
backend/potato/tools/: bootstrap_db.py
docs/: assignment.md
frontend/: Makefile  package.json  vite.config.js
frontend/src/: app.html
frontend/src/lib/components/avatar/: index.svelte
frontend/src/lib/components/icon/: index.svelte
frontend/src/lib/components/recipe-table/: index.svelte
frontend/src/lib/service/: recipe-client.js
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/recipe/[recipe_id]/: +page.svelte
frontend/src/routes/status/: +page.svelte
frontend/static/: cyberpunk.css
storage/: README.md  recipes-demo.db  recipes.db
storage/sql/: 00_initialize.sql  01_demo_user.sql  02_demo_recipes.sql
